# Paimon

./: .gitignore  LICENSE
paimon/: pyproject.toml
paimon-envs/: README.md  setup_base.sh
paimon-envs/envs/base/: check.sh  install.sh  pyproject.toml  setup.sh
paimon-envs/envs/mace/: check.sh  install.sh  pyproject.toml  setup.sh
paimon-envs/envs/mace/test/: job.sh  lammps.in
paimon-envs/envs/sevennet/: check.sh  install.sh  pyproject.toml  setup.sh
paimon-envs/envs/sevennet/test/: lammps.in
paimon-envs/sitecustomize/: sitecustomize.py
paimon-envs/sub/: pyproject.toml
paimon-envs/sub/simulation_util/: convert.py
paimon-envs/sub/simulation_util/introspection/: __init__.py  quick_introspect.py  runtime_probe.py
paimon-envs/sub/simulation_util/io/: ase.py  hdf5.py  universe.py
paimon-web/: pyproject.toml
paimon-web/src/paimon_web/: __init__.py  config.py
paimon-web/src/paimon_web/api/: __init__.py  __main__.py  error_handler.py  main.py
paimon-web/src/paimon_web/observability/: __init__.py  chat.py  chat_cache.py  fs_reader.py  models.py  process_manager.py  reconcile_loop.py  run_index.py  view_adapter.py
paimon-web/src/paimon_web/util/: log.py
paimon-web/src/paimon_web/web/static/: style.css
paimon-web/src/paimon_web/web/static/js/: chat.js  detail-panel.js  file-tree.js
paimon-web/src/paimon_web/web/templates/: base.html  chat.html  detail_files_fragment.html  detail_status_fragment.html  error.html  runs.html  subtask.html  unified_run.html
paimon-web/src/paimon_web/web/templates/partials/: _chat_form.html  _chat_messages.html  _detail_panel.html  _file_tree_node.html  _launch_form.html
paimon/src/paimon/: __init__.py  audit.py  config.py  models.py  token_sum.py
paimon/src/paimon/agent/: __init__.py  agent_config.py  paimon_agent.py  registry.py
paimon/src/paimon/agent/executors/: ase_agent.py  lammps_agent.py  llamp_agent.py  md_analyzer.py  mock_agent.py  monolithic_agent.py  packmol_agent.py
paimon/src/paimon/cli/: __init__.py  code_search.py  docs.py  extract.py  list_store.py
paimon/src/paimon/developers/: ase_python_w_odin_gpu.py  fetch_packmol_knowledge.py  le_ase_gate.py  le_lammps_gate.py  repro_timeout_orphan.py  step_rubric.json
paimon/src/paimon/episodic/: __init__.py  extract.py  format.py  loader.py  models.py
paimon/src/paimon/extraction/: __init__.py  paper_extraction.py
paimon/src/paimon/interface/: cli.py
paimon/src/paimon/knowledge/: __init__.py  library.py
paimon/src/paimon/knowledge/agents/: common.txt  common_interactive.txt
paimon/src/paimon/knowledge/agents/ase_agent/: tips.txt
paimon/src/paimon/knowledge/agents/critic/: common.txt  completion_review.txt  message_summarizer.txt  pre_submission_gate.txt
paimon/src/paimon/knowledge/agents/lammps_agent/: critic.txt  tips.txt
paimon/src/paimon/knowledge/agents/llamp_agent/: tips.txt
paimon/src/paimon/knowledge/agents/md_analyzer/: tips.txt
paimon/src/paimon/knowledge/agents/monolithic_agent/: core.txt  tool_selection_guide.txt
paimon/src/paimon/knowledge/agents/packmol_agent/: tips.txt  userguide.txt
paimon/src/paimon/knowledge/code/: freud.txt
paimon/src/paimon/knowledge/episodic/sim_liquid_electrolyte/: 0bqqlmk8.json  3ocprdrc.json  4i2c3r0c.json
paimon/src/paimon/knowledge/expert/: general.txt  sim_liquid_electrolyte.txt  sim_solid_electrolyte.txt
paimon/src/paimon/knowledge/forcefield/: umlip.txt
paimon/src/paimon/knowledge/forcefield/mace/: ase.txt  lammps.txt  planner.txt
paimon/src/paimon/knowledge/forcefield/sevennet/: ase.txt  lammps.txt  planner.txt
paimon/src/paimon/knowledge/legacy/: amorphous_generation.txt  conformer_search.txt  mp_examples.txt  mp_tips.txt
paimon/src/paimon/knowledge/planner/: outline_tool_output.txt  system_prompt.txt  system_prompt_v2.txt  user_prompt.txt
paimon/src/paimon/llm/: __init__.py  base.py  pipeline.py  query.py  wrappers.py
paimon/src/paimon/llm/providers/: anthropic.py  google_genai.py  openai_response.py
paimon/src/paimon/rag/: __init__.py  format.py  indexer.py  rag_planner_prompt.txt  summarizer.py  web_crawl.py
paimon/src/paimon/rag/code_search/: __init__.py  chroma_store.py  crawler.py  extractors.py  local_indexer.py
paimon/src/paimon/rag/docs/: __init__.py  models.py  parser.py  rag.py  retrievers.py
paimon/src/paimon/runtime/: runner.py  server_debug.py  user_preference.py  worker.py
paimon/src/paimon/runtime/interface/: cli.py  web.py
paimon/src/paimon/util/: artifacts.py  chat.py  context.py  log.py  tool_factory.py
paimon/src/paimon/workflow/: _plan_validation.py  dynamic_plan.py  events.py  plan_viz.py  prompt_helpers.py  prompts.yml  subtask_agent.py
paimon/src/paimon/world/: __init__.py  _connection.py  code_search_tools.py  common_tools.py  critic.py  environment.py  expert_tools.py  remote_python.py  retrieval_tools.py  slurm.py  slurm_tools.py  todo_tools.py  web_search_tools.py
scripts/: action_draw.py  action_space.json  action_space.py  audit  pm  subtask_eval.py  write_total.py
(+3 files in other folders)
