[project]
name = "paimon-env-base"
version = "0.1.0"
description = "Base environment for Paimon"
requires-python = ">=3.12"
dependencies = [
    "freud-analysis>=3.3.1",
    "ipython>=9.4.0",
    "mdanalysis>=2.9.0",
    "simulation-util",
    "torch==2.7.1",
    "h5py",
    "jedi>=0.19.0",
    "spglib>=2.7.0",
    "pymatgen>=2025.10.7",
    "rdkit>=2025.9.4",
    "pubchempy>=1.0.5",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
simulation-util = { path = "../../sub", editable = true }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

