[project]
name = "paimon-env-sevennet"
version = "0.1.0"
description = "SevenNet environment for Paimon"
requires-python = ">=3.12"
dependencies = [
    "freud-analysis>=3.3.1",
    "ipython>=9.4.0",
    "mdanalysis>=2.9.0",
    "simulation-util",
    "torch==2.7.1",
    "h5py",
    "spglib>=2.7.0",
    "pymatgen>=2025.10.7",
    "rdkit>=2025.9.4",
    "pubchempy>=1.0.5",
    "sevenn>=0.12.0",
    "cuequivariance==0.7.0",
    "cuequivariance-torch==0.7.0",
    "cuequivariance-ops-torch-cu12==0.7.0",
    # flashTP_e3nn should be manually installed within sevennet venv
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
simulation-util = { path = "../../sub", editable = true }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

